Add a div with a new class stats-container. Remove stats class.

--- a/index.html
+++ b/index.html
@@ -37,17 +37,19 @@
             Discover the benefits of data analytics and make better decisions
             regarding revenue, customer experience, and overall efficiency.
           </p>
-          <div class="stats">
-            <p class="stat-value">10k+</p>
-            <p class="stat-name">Companies</p>
-          </div>
-          <div>
-            <p class="stat-value">314</p>
-            <p class="stat-name">templates</p>
-          </div>
-          <div>
-            <p class="stat-value">12M+</p>
-            <p class="stat-name">queries</p>
+          <div class="stats-container">
+            <div>
+              <p class="stat-value">10k+</p>
+              <p class="stat-name">Companies</p>
+            </div>
+            <div>
+              <p class="stat-value">314</p>
+              <p class="stat-name">templates</p>
+            </div>
+            <div>
+              <p class="stat-value">12M+</p>
+              <p class="stat-name">queries</p>
+            </div>
           </div>
         </article>
       </section>
