--- a/index.html
+++ b/index.html
@@ -28,27 +28,28 @@
               class="img card-img"
             />
           </div>
-
-          <h2 class="card-title">
-            Get <span class="violet">insights</span> that help your business
-            grow.
-          </h2>
-          <p>
-            Discover the benefits of data analytics and make better decisions
-            regarding revenue, customer experience, and overall efficiency.
-          </p>
-          <div class="stats-container">
-            <div>
-              <p class="stat-value">10k+</p>
-              <p class="stat-name">Companies</p>
-            </div>
-            <div>
-              <p class="stat-value">314</p>
-              <p class="stat-name">templates</p>
-            </div>
-            <div>
-              <p class="stat-value">12M+</p>
-              <p class="stat-name">queries</p>
+          <div class="card-details">
+            <h2 class="card-title">
+              Get <span class="violet">insights</span> that help your business
+              grow.
+            </h2>
+            <p>
+              Discover the benefits of data analytics and make better decisions
+              regarding revenue, customer experience, and overall efficiency.
+            </p>
+            <div class="stats-container">
+              <div>
+                <p class="stat-value">10k+</p>
+                <p class="stat-name">Companies</p>
+              </div>
+              <div>
+                <p class="stat-value">314</p>
+                <p class="stat-name">templates</p>
+              </div>
+              <div>
+                <p class="stat-value">12M+</p>
+                <p class="stat-name">queries</p>
+              </div>
             </div>
           </div>
         </article>
