Use picture element. Delete README-template and update README.

--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
       <section class="card-container">
         <article class="card">
           <div class="card-img-container">
-            <img
-              src="images/image-header-mobile.jpg"
-              alt="A group of women talking and working on laptops in a meeting "
-              class="img card-img"
-            />
+            <picture>
+              <source media="(min-width: 768px)" srcset="/images/image-header-desktop.jpg" />
+              <img
+                src="/images/image-header-mobile.jpg"
+                alt="A group of people in a meeting "
+                class="img card-img"
+              />
+            </picture>
           </div>
           <div class="card-details">
             <h2 class="card-title">
