--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <article class="card">
           <div class="card-img-container">
             <picture>
-              <source media="(min-width: 768px)" srcset="/images/image-header-desktop.jpg" />
+              <source
+                media="(min-width: 768px)"
+                srcset="/images/image-header-desktop.jpg"
+              />
               <img
                 src="/images/image-header-mobile.jpg"
                 alt="A group of people in a meeting "
@@ -54,13 +57,15 @@
           </div>
         </article>
       </section>
+      <footer class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/mathangisd/stats-preview.git"
+          >Mathangi Subramanian</a
+        >.
+      </footer>
     </main>
-
-    <footer class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by Mathangi Subramanian</a>.
-    </footer>
   </body>
 </html>
