--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <main role="main">
+    <main>
       <h1 class="sr-only">Stats Preview Card Container</h1>
       <section class="card-container">
         <article class="card">
