Add h2 heading to section and change h1 heading

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   </head>
   <body>
     <main>
-      <h1 class="sr-only">Stats Preview Card Container</h1>
+      <h1 class="sr-only">Stats Preview Card Component</h1>
       <section class="card-container">
+        <h2 class="sr-only">Stats preview card details</h2>
         <article class="card">
           <div class="card-img-container">
             <picture>
